plugins {
	id 'net.fabricmc.fabric-loom' version "${loom_version}"
	id 'maven-publish'
	id 'prime.shader-abi-conventions' apply false
	id 'prime.native-packaging-conventions' apply false
	id 'prime.architecture-conventions'
}

version = project.mod_version
group = project.maven_group

base {
	archivesName = project.archives_base_name
}

def developmentGraphicsBackend = providers.gradleProperty('primeBackend').orElse('vulkan')

repositories {
	mavenCentral()
}

loom {
	splitEnvironmentSourceSets()
	accessWidenerPath = file('src/client/resources/prime.accesswidener')

	mods {
		prime {
			sourceSet sourceSets.main
			sourceSet sourceSets.client
		}
	}

	runs {
		client {
			client()
			setConfigName('Prime Vulkan Client')
			ideConfigGenerated = true
			runDir = 'run'
			def selectedBackend = developmentGraphicsBackend.get().toLowerCase(java.util.Locale.ROOT)
			if (selectedBackend != 'vulkan' && selectedBackend != 'opengl') {
				throw new GradleException("primeBackend must be either 'vulkan' or 'opengl'")
			}
			programArgs '--graphicsBackend', selectedBackend
			if (selectedBackend == 'vulkan') {
				programArgs '--vulkanValidation'
			}
		}
	}
}

apply plugin: 'prime.shader-abi-conventions'
apply plugin: 'prime.native-packaging-conventions'

dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	implementation "net.fabricmc:fabric-loader:${project.loader_version}"
	implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"

	testImplementation platform('org.junit:junit-bom:6.0.3')
	testImplementation 'org.junit.jupiter:junit-jupiter'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}


tasks.named('compileTestJava') {
	dependsOn tasks.named('compileClientJava')
}

processResources {
	inputs.property 'version', project.version
	filesMatching('fabric.mod.json') {
		expand version: inputs.properties.version
	}
}

tasks.withType(JavaCompile).configureEach {
	options.release = 25
	options.compilerArgs += ['-Xlint:all', '-Werror']
}


java {
	withSourcesJar()
	sourceCompatibility = JavaVersion.VERSION_25
	targetCompatibility = JavaVersion.VERSION_25
}


tasks.named('check') {
	dependsOn 'verifyDistributionJar', 'verifyRoboCutePort'
}

publishing {
	publications {
		create('mavenJava', MavenPublication) {
			from components.java
		}
	}
}
